crates/piper-protocol/tests/ui/unchecked_const_constructor.rs
fn main() {
    let _ = piper_protocol::frame::StandardCanId::new_const(0x123);
}
